Revised platelet addition to proteins chapter and added to conclusion

--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -53,7 +53,7 @@ Sledz, K. M., Moore, S. F., Vijayaragavan, V., Mallah, S., **Goudswaard, L. J.**
 
 **Goudswaard L. J.**, Williams C. M., Khalil J., Hamilton F., Arnold D., Milne A., Lewis P. A., Heesom K. K., Mundell S. J., Davidson A., Poole A. W., Hers I. Altered platelet proteome and impaired platelet integrin α~IIb~β~3~ activation in hospitalised patients with COVID-19. 
 
-Constantinescu A. E., Bull C. J., **Goudswaard L. J.**, Zheng J., Elsworth B., Timpson N. J., Moore S. F., Hers I.,* Vincent E. E. Phenome-wide analysis to investigate deep vein thrombosis aetiology.
+Constantinescu A. E., Bull C. J., **Goudswaard L. J.**, Zheng J., Elsworth B., Timpson N. J., Moore S. F., Hers I., Vincent E. E. Phenome-wide analysis to investigate deep vein thrombosis aetiology.
 
 ## Presentations from the PhD
 
