--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -50,7 +50,7 @@ Previous studies have attempted to determine the direct effects of BMI on platel
 The aims of this chapter were to:
 
 1) Optimise laboratory techniques to assess platelet function in bariatric patients pre-surgery (BMI >40kg/m^2^) and healthy controls (BMI 18-25kg/m^2^) .
-2) Determine whether high BMI is associated with: an increase in immature platelet count, an increase in platelet function and an alteration in platelet protein expression by comparing platelets (Figure \@ref(fig:BMI-platelet-overview2)).
+2) Determine whether high BMI is associated with an alteration in platelet function and signalling (Figure \@ref(fig:BMI-platelet-overview2)).
 
 (ref:caption-BMI-platelet-overview2) **Schematic of the associations explored: this chapter explores the relationship between body mass index and platelet function.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview2) Schematic of the associations explored in the current chapter
@@ -165,7 +165,7 @@ include_graphics(path = "figure/Bariatric_study/Agonist_Integrin_Pselectin.pdf",
 
 ### Platelet-neutrophil aggregates
 
-Next, platelet-neutrophil interactions were explored to determine whether there was a difference in the proportion of neutrophils that are bound to platelets, therefore demonstrative of a difference in inflammation and hyperactive platelets. This was explored by gating neutrophils using an antibody for the specific neutrophil marker, CD45, and their side scatter (granularity). Within this gate, the percentage of neutrophils interacting with platelets was determined by using an antibody for the platelet specific marker CD41 (integrin α~IIb~ subunit) and determining the percentage of events that were both CD45+ and CD41+. There was no difference in the percentage of neutrophils bound to platelets under basal conditions (7.0 % (SEM 1.5 %) in control v 11.2 % (SEM 3.2%) in bariatric patient group, p=0.30). Similarly, after stimulation with CRP, there was no difference in the percentage of neutrophil-platelet aggregates (38.6 % (SEM 2.6 %) in control group v 35.5 % (SEM 2.7 %), p=0.48).  
+Next, platelet-neutrophil interactions were explored to determine whether there was a difference in the proportion of neutrophils that are bound to platelets, therefore demonstrative of a difference in hyperactive platelets. This was explored by gating neutrophils using an antibody for the specific neutrophil marker, CD45, and their side scatter (granularity). Within this gate, the percentage of neutrophils interacting with platelets was determined by using an antibody for the platelet specific marker CD41 (integrin α~IIb~ subunit) and determining the percentage of events that were both CD45+ and CD41+. There was no difference in the percentage of neutrophils bound to platelets under basal conditions (7.0 % (SEM 1.5 %) in control v 11.2 % (SEM 3.2%) in bariatric patient group, p=0.30). Similarly, after stimulation with CRP, there was no difference in the percentage of neutrophil-platelet aggregates (38.6 % (SEM 2.6 %) in control group v 35.5 % (SEM 2.7 %), p=0.48).  
 
 (ref:scaption2b) Comparison of neutrophil-platelet aggregates across bariatric and control groups.
 (ref:caption2b) **Comparison of neutrophil-platelet aggregates across bariatric and control groups.** Neutrophil-platelet aggregates were determined using CD45 and CD41 antibodies. Aggregates were compared across bariatric patient and control participant groups in unstimulated and stimulated (5 ug/mL CRP) conditions. N=4. P-values provided for the results of a two-way ANOVA with Sidak's multiple comparisons tests. Mean + SEM displayed.
