--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -35,13 +35,11 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 Obesity is associated with an increased risk of type II diabetes (T2D), cardiovascular diseases, musculoskeletal diseases, and types of cancer[@Garg2014; @Khan2018; @Kortt2002]. These associations are well established, however mechanisms of disease are less clear. It is likely that a change in the composition of proteins circulating in the blood plays a role in obesity-related cardiovascular risk[@Goudswaard2021]. The previous results chapter (Chapter \@ref(BMI-protein-MR)) examined the effect of BMI on the plasma proteome and provided estimates for the average change in proteins per average difference in BMI in a general population, using observational estimates and one sample Mendelian randomization (MR). There was evidence of a BMI effect on proteins such as leptin, sex hormone binding globulin (SHBG), fatty acid binding protein 4 (FABP4) and fumarylacetoacetase. Within an enrichment analysis, this change in circulating levels of these proteins was implicated in cardiovascular diseases. There is also evidence that obesity affects platelet function, thereby elevating the risk of thrombotic events. There is evidence from the literature and from Chapter \@ref(chemokine-platelets) that circulating proteins could mediate this risk.
 
-Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 particpants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related cardiovascular disease. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This chapter therefore aims to:
-
-1) Examine the effect of reducing BMI with caloric restriction on the plasma proteome.
+Although MR helps to overcome issues inherent to observational studies such as confounding and reverse causation, MR has its own limitations. For example, it is possible that genetic variants used for the genetic risk score could affect protein levels through routes other than changes in BMI. This is known as horizonal pleiotropy[@Davies2018]. As well as this, although there were over 2700 particpants within the MR, this is a relatively small sample size for the study design. Additionally, it is important to not only look at which proteins are altered within the population with higher BMI; identifying which proteins can be modulated with weight loss is important as this may help reveal mechanistic insight into mechanisms of obesity-related cardiovascular disease. Triangulation can therefore be used in efforts to further determine the BMI effects on the plasma proteome. Triangulation is defined as strengthening causal inference through the combination of study designs which each have separate sources of bias[@Lawlor2016]. Therefore, to add an independent source of evidence to the MR in the previous chapter, the Diabetes REmission Clinical Trial (DiRECT) can be utilised. The DiRECT trial consisted of a group of patients with overweight/obesity and T2D who were either given guideline T2D care or an acute intervention, consisting of a low calorie diet, to help with weight loss and T2D remission[@Lean2018]. This chapter therefore aims to: examine the effect of reducing BMI with caloric restriction on the plasma proteome.
 
 (ref:caption-BMI-protein-graphic2) **Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT). This chapter explores the effect of caloric restriction-induced weight loss on the plasma proteome.** Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic2) Schematic of the associations explored in Chapter \@ref(BMI-protein-RCT)
-```{r BMI-protein-graphic2, echo = FALSE , fig.scap="(ref:scaption-BMI-protein-graphic2)", fig.cap="(ref:caption-BMI-protein-graphic2)", out.width="90%"}
+```{r BMI-protein-graphic2, echo = FALSE , fig.scap="(ref:scaption-BMI-protein-graphic2)", fig.cap="(ref:caption-BMI-protein-graphic2)", out.width="80%"}
 include_graphics(path = "figure/DiRECT/Thesis_graphic_overview_BMI_protein_CVD.png", dpi = NA)
 ```
 
@@ -67,7 +65,9 @@ Blood was taken from participants into 9 mL vacutainers with EDTA (an anticoagul
 ### Statistical analysis
 Analyses were performed using R version 3.6.1. A total of 265 participants were included in the current analysis. Participant baseline characteristics were summarised as the mean and SD. Baseline characteristics were calculated for both control group (N=146) and intervention (N=119) and were compared across groups using either a two-tailed unpaired t-test or a Chi^2^ test. 
 
-The associations between BMI change and protein changes were explored using linear regression adjusting for centre, list size, age and sex (function lm() from base R "stats" package). Due to the nature of linear regression, outputs of regression provide the mean individual change in protein (in SDs) per SD increase in BMI. Therefore if more weight loss reduces the levels of protein, the beta coefficient is positive[@Figarska2020]. The association between potential confounders (age and sex) and both exposure (BMI change) and outcome (protein change) were explored using linear regression. The difference in BMI change in intervention group compared to control was performed using linear regression, adjusting for centre, list size, age and sex. Covariables (age, sex, centre and list size) were compared across treatment groups. Treatment group was therefore used as an instrument for BMI change in a two stage least squares analysis \@ref(fig:direct-tsls) to estimate the effects of BMI change on protein change using the ivreg() function from the "AER" R package (https://github.com/cran/AER/blob/master/R/ivreg.R). BMI change-protein change point estimates for 4601 proteins from the multiple linear regression analyses and two stage least squares analyses were compared using linear regression. The association between BMI change and change in platelet proteins were also examined by searching for the UniProt IDs of the same platelet proteins as the previous chapter (Chapter \@ref(BMI-protein-MR)). This approach was used due to the lack of distinct groupings in the SomaLogic protein list. As a sensitivity analysis, for proteins which associate with BMI change, baseline protein levels were compared across control and intervention groups. P values were adjusted for multiple testing based on the number of representative proteins (0.05/869 = 5.8x10^-5^). As a separate sensitivity analysis, a linear mixed model was used to account for baseline and endpoint protein levels (as the change in protein variable derived does not account for this). For the linear mixed model, the lmer() function from the "lme4" package, protein levels were used as the dependent variable, with treatment group and visit entered as fixed effects (and exploration of an interaction) and subject as a random effect. Estimates from the interaction of treatment group and visit were derived for each protein. These estimates were compared with the two stage least squares estimates.
+The associations between BMI change and protein changes were explored using linear regression adjusting for centre, list size, age and sex (function lm() from base R "stats" package). Due to the nature of linear regression, outputs of regression provide the mean individual change in protein (in SDs) per SD increase in BMI. Therefore if more weight loss reduces the levels of protein, the beta coefficient is positive[@Figarska2020]. The association between potential confounders (age and sex) and both exposure (BMI change) and outcome (protein change) were explored using linear regression. The difference in BMI change in intervention group compared to control was performed using linear regression, adjusting for centre, list size, age and sex. Covariables (age, sex, centre and list size) were compared across treatment groups. Treatment group was therefore used as an instrument for BMI change in a two stage least squares analysis \@ref(fig:direct-tsls) to estimate the effects of BMI change on protein change using the ivreg() function from the "AER" R package (https://github.com/cran/AER/blob/master/R/ivreg.R). BMI change-protein change point estimates for 4601 proteins from the multiple linear regression analyses and two stage least squares analyses were compared using linear regression. 
+
+The association between BMI change and change in platelet proteins were also examined by searching for the UniProt IDs of the same platelet proteins as the previous chapter (Chapter \@ref(BMI-protein-MR)). This approach was used due to the lack of distinct groupings in the SomaLogic protein list. As a sensitivity analysis, for proteins which associated with BMI change, baseline protein levels were compared across control and intervention groups. Similar to the previous chapter, the estimates for the effect of BMI change on a change in levels of the chemokines MDC and TARC were also explored. P-values were adjusted for multiple testing based on the number of representative proteins (0.05/869 = 5.8x10^-5^). As a separate sensitivity analysis, a linear mixed model was used to account for baseline and endpoint protein levels (as the change in protein variable derived does not account for this). For the linear mixed model, the lmer() function from the "lme4" package, protein levels were used as the dependent variable, with treatment group and visit entered as fixed effects (and exploration of an interaction) and subject as a random effect. Estimates from the interaction of treatment group and visit were derived for each protein. These estimates were compared with the two stage least squares estimates.
 
 (ref:scaption-direct-tsls) Schematic of two stage least squares analysis performed using DiRECT data
 (ref:caption-direct-tsls) **Schematic of two stage least squares analysis performed in the current chapter.** Figure made using BioRender.com.
@@ -109,7 +109,7 @@ column_spec(1, width = "6cm") %>%
 ### Observational association between BMI change and protein change
 Linear regression was used to estimate the effect of BMI change on protein change, where BMI change (endpoint-baseline) was used as the exposure and protein change (endpoint-baseline) was used as the outcome and adjusting for confounders. After adjusting for multiple testing (p<5.8x10^-5^), 254 proteins out of 4601 proteins were associated with BMI change (5.5 % of all protein tested) (Supplementary Table 1). Although overall there was weight loss and a reduction in BMI, beta coefficients can be interpreted as the change in protein level (SDs) per SD increase in BMI. Negative associations were observed with BMI change and scavenger receptor class A member 5 (SCAR5, -0.62 SDs per SD increase in BMI, 95% CI -0.72 to -0.53 p=3.7x10^-29^) and apolipoprotein F (-0.58 SDs per SD increase in BMI, 95% -0.68 to -0.48, p=1.8x10^-24^). BMI change was positively associated with changes in levels of Proto-oncogene tyrosine-protein kinase receptor Ret (RET) (0.59 SDs increase per SD increase in BMI, 95% CI 0.49 to 0.69 p=1.6x10^-25^), growth hormone receptor (GHR) (0.59 SDs increase per SD increase in BMI, 95% CI 0.49 to 0.69 p=5.8x10^-25^). 
 
-Proteins involved in GO platelet pathways were explored within the results. There were 248 platelet proteins identified in DiRECT. In the linear regression analysis, there was evidence for an effect of BMI change on 31 platelet proteins (12.5%) (Supplementary Table 2). Associations include a positive association between BMI change and collagen type III (0.37 SDs increase per SD increase in BMI, 95% CI 0.26-0.48), p=5.1x10^-10^. There was also a positive association between BMI change and plasminogen activator inhibitor 1 (PAI-1, 0.29 SDs increase per SD increase BMI, 0.17-0.40, p=1.9x10^-6^). The platelet primer insulin-like growth factor 1 (IGF-1) was negatively associated with BMI (-0.28 SDs per SD increase in BMI, 95% CI -0.40 to -0.16, p=4.8x10^-6^). The estimate for the association between BMI change and PAFAH was (-0.16 SDs per SD increase in BMI, 95% CI -0.28 to -0.04, p=9.7x10^-3^) and therefore did not pass multiple testing correction. 
+Proteins involved in GO platelet pathways were explored within the results. There were 248 platelet proteins identified in DiRECT. In the linear regression analysis, there was evidence for an effect of BMI change on 31 platelet proteins (12.5%) (Supplementary Table 2). Associations include a positive association between BMI change and collagen type III (0.37 SDs increase per SD increase in BMI, 95% CI 0.26-0.48), p=5.1x10^-10^. There was also a positive association between BMI change and plasminogen activator inhibitor 1 (PAI-1, 0.29 SDs increase per SD increase BMI, 0.17-0.40, p=1.9x10^-6^). The platelet primer insulin-like growth factor 1 (IGF-1) was negatively associated with BMI (-0.28 SDs per SD increase in BMI, 95% CI -0.40 to -0.16, p=4.8x10^-6^). The estimate for the association between BMI change and PAFAH was (-0.16 SDs per SD increase in BMI, 95% CI -0.28 to -0.04, p=9.7x10^-3^) and therefore did not pass multiple testing correction. The estimate for the effect of BMI change on the change in levels was 0.10 SD (95% CI -0.02 to 0.22, p=0.099) and was 0.07 SD for TARC (95% CI -0.04 to 0.19, p=0.22).  
 
 ### Association between confounders and exposure/outcomes
 There was weak evidence for an association between age and BMI change (0.02 SDs increase in BMI change per 1 year, 95 % CIs -0.0003 to 0.034, p=0.054), where an increase in BMI change means that the participant is less likely to reduce their BMI. There was no evidence that sex was associated with BMI change (BMI change 0.073 SDs increase in BMI change in females compared with males, 95 % CI -0.17 to 0.32, p=0.56) (Supplementary Table 2). Age and sex displayed weak associations with protein changes, but these did not pass multiple testing adjustment (Supplementary Tables 3 and 4).
@@ -133,14 +133,14 @@ Treatment group was used as an instrument for BMI change in a two-stage least sq
 include_graphics(path = "figure/DiRECT/QQ_plots_obs_IV.pdf", dpi = NA)
 ```
 
-In the two stage least squares analysis, there was evidence for an effect of BMI change on 13 proteins. The estimate for the effect of BMI change on collagen type III was 0.53 SDs per SD increase in BMI (95% CI 0.35 to 0.71, p=2.0x10^-8^), larger in magnitude than in the observational analysis (Supplementary Table 2). The estimate for the association between BMI change and the platelet protein, PAFAH, strengthened in the instrumental variable model, where the estimate was -0.42 (95% CI -0.61 to -0.22, p=5.3x10^-5^), thereby passing the multiple testing adjustment. 
+In the two stage least squares analysis, there was evidence for an effect of BMI change on 13 platelet proteins. The estimate for the effect of BMI change on collagen type III was 0.53 SDs per SD increase in BMI (95% CI 0.35 to 0.71, p=2.0x10^-8^), larger in magnitude than in the observational analysis (Supplementary Table 2). The estimate for the association between BMI change and the platelet protein, PAFAH, strengthened in the instrumental variable model, where the estimate was -0.42 (95% CI -0.61 to -0.22, p=5.3x10^-5^), thereby passing the multiple testing adjustment. The two stage least squares analysis did not provide evidence for an effect of BMI change on a change in levels of MDC or TARC. 
 
 ### Comparison of observational linear regression and TSLS results for the effect of BMI change on protein change
 A total of 110 proteins were only associated within the observational linear regression model, whereas 27 proteins were only associated in the TSLS analysis using treatment group as an instrument for BMI change. 144 proteins were associated with BMI in both analyses (\@ref(fig:circos)), with largest effect estimates across methods for SCAR5, Adiponectin, Apolipoprotein F, growth hormone receptor (GHR), receptor-type tyrosine-protein phosphatase U (PTPRU) and sex hormone binding globulin. These can be seen in Figure \@ref(fig:scatter-DiRECT). Of these 144 BMI change-protein change associations that were consistent across both models, 121 were positive, where weight loss led to a reduction in levels of the protein.
 
 (ref:scaption-circos) Circos plot of proteins associated with BMI change in DiRECT
 (ref:caption-circos) **Circos plot displaying the protein change (SDs) per SD increase in BMI in DiRECT**. Blue estimates are the two stage least squares estimates and the yellow estimates are from the linear regression. Proteins presented were associated in both models at p=5.8x10^-5^. Figure made using the EpiViz R package https://github.com/mattlee821/EpiViz. 
-```{r circos, echo = FALSE, out.width="100%", fig.cap="(ref:caption-circos)", fig.scap= "(ref:scaption-circos)"}
+```{r circos, echo = FALSE, out.width="80%", fig.cap="(ref:caption-circos)", fig.scap= "(ref:scaption-circos)"}
 include_graphics(path = "figure/DiRECT/circos_plot_BMI_change_protein_ols_tsls.pdf", dpi = NA)
 ```
 
@@ -196,7 +196,7 @@ mytable %>% kable(caption = "(ref:caption-DAVID-enrichment-DiRECT)", booktabs = 
   landscape()
 ```
 
-Using StringDB and inputting p values for the association between BMI change and each protein change, there was evidence for enrichment of KEGG pathways. Using the UniProt IDs and p-values from the linear regression analysis for BMI change and protein change, there was evidence that proteins altered by protein change in the linear regression model were involved in cytokine-cytokine receptor interaction (enrichment score = 0.14, pathway size = 282, p = 2.4x10^-4^) and complement and coagulation cascades (enrichment score = 0.36, pathway size = 82, p = 9.8x10^-4^). These were the only pathways associated with the "top of the input", therefore indicating enrichment of proteins most strongly associated with BMI change. There was also enrichment for platelet activation, however the analysis suggested that this enrichment was at the bottom of the protein list (enrichment score 4.9, pathway size 122, p=6.5x10^-5^), therefore more proteins involved in platelet activation were not associated with BMI change. The network of proteins involved in platelet activation is shown in \@ref(fig:platelet-enrichment). KEGG enrichment results were not available by inputting the ranked p values for the proteins from the instrumental variable analysis.
+Using StringDB and inputting p values for the association between BMI change and each protein change, there was evidence for enrichment of KEGG pathways. Using the UniProt IDs and p-values from the linear regression analysis for BMI change and protein change, there was evidence that proteins altered by protein change in the linear regression model were involved in cytokine-cytokine receptor interaction (enrichment score = 0.14, pathway size = 282, p = 2.4x10^-4^) and complement and coagulation cascades (enrichment score = 0.36, pathway size = 82, p = 9.8x10^-4^). These were the only pathways associated with the "top of the input", therefore indicating enrichment of proteins most strongly associated with BMI change. There was also enrichment for platelet activation, however the analysis suggested that this enrichment was at the bottom of the protein list (enrichment score 4.9, pathway size 122, p=6.5x10^-5^), therefore more proteins involved in platelet activation were not associated with BMI change. The network of proteins involved in platelet activation is shown in Figure \@ref(fig:platelet-enrichment). KEGG enrichment results were not available by inputting the ranked p values for the proteins from the instrumental variable analysis.
 
 \blandscape
 (ref:caption-platelet-enrichment) **Network of proteins in DiRECT which are involved in platelet activation**. Nodes represent individual proteins. The halo colour represents the rank of the protein where blue indicates the top of the list (most strongly associated with BMI change) and red indicates the bottom of the list. The edges indicate known interactions between proteins. Figure from made using string-db.org
@@ -250,7 +250,7 @@ column_spec(4, width = "8cm") %>%
 
 This study also provides some novel proteins associated with a reduction in BMI including SCAR5, chondroadherin (CHAD), fumarylacetoacetase (FAAA) and  aminoacylase-1. A reduction in BMI led to an increase in plasma levels of SCAR5. This protein is involved in mediating commitment of mesenchymal stem cells into adipocytes and is highly expressed in white adipose tissue (WAT[@Lee2017a]. A reduction in BMI also increased levels of chondroadherin (CHAD). Chondroadherin is a protein which is important in regulating exctracellular matrix organisation in cartilage and bones[@Hessle2013; @Iozzo2015]. CHAD knockout mice show decreased bone strength compared with wildtype[@Hessle2013]. This suggests that weight reduction may be beneficial for bone strength. The function of these proteins and relationship with adiposity needs to be further characterised.
 
-The effect of BMI on specific platelet-related proteins was explored by extracting the estimates for proteins involved in platelet GO pathways. Both analyses indicated that a reduction in BMI reduces the levels of collagen type III. Collagen activates platelets by binding to receptors such as the GPVI receptor, therefore this reduction may reduce platelet activation[@Maurice2006]. The instrumental variable analysis detected an effect of BMI change on PAFAH. Here, a reduction in BMI led to higher levels of PAFAH. This platelet protein was detected in Chapter \@ref(BMI-protein-MR). PAFAH is protein which has been shown to bind to lipoproteins, thereby reducing their oxidation[@Noto2003]. The comparison across studies will be discussed further in Chapter \@ref(Comparison-proteome). 
+The effect of BMI on specific platelet-related proteins was explored by extracting the estimates for proteins involved in platelet GO pathways. Both analyses indicated that a reduction in BMI reduces the levels of collagen type III. Collagen activates platelets by binding to receptors such as the GPVI receptor, therefore this reduction may reduce platelet activation[@Maurice2006]. The instrumental variable analysis detected an effect of BMI change on PAFAH. Here, a reduction in BMI led to higher levels of PAFAH. This platelet protein was detected in Chapter \@ref(BMI-protein-MR). PAFAH is protein which has been shown to bind to lipoproteins, thereby reducing their oxidation[@Noto2003]. The comparison across studies will be discussed further in Chapter \@ref(Comparison-proteome). The chemokines utilised in Chapter \@ref(chemokine-platelets), MDC and TARC, were included in the SomaLogic panel, therefore were also specifically looked up within the results. The evidence suggested that a reduction in BMI did not alter levels of MDC and TARC, however it is also possible that the sample size was limited to detect smaller magnitudes of effects.
 
 The enrichment results comparing the 144 proteins which were altered with BMI change to the full 4601 proteins tested confirmed this as there was strongest evidence for enrichment of proteins involved in metabolic disease and renal disease, however the effect on cardiovascular disease did not pass multiple testing adjustment. Pathway enrichment using StringDB also suggested that proteins most altered with BMI change were involved in cytokine-cytokine receptor interactions and complement and coagulation cascades, rather that platelet activation. It could be that the effect on inflammation and coagulation may be more immediate effects, and that changes in platelet activation may either require a more sustained weight loss, or a further reduction in BMI to see effects.
 
