--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -92,7 +92,7 @@ Units <- c('%','%','10^9^/L','10^9^/L','%','fL','10^9^/L','%','fL','RFUs','RFUs'
 MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
 mytable = data.frame(cbind(Name, FullName, Deriv, Units, MeanSD))
 colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait',	'Units',	'Mean (SD)')
-mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Platelet-traits)") %>% 
+mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-Platelet-traits)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(2, width = "4cm")   %>%
