--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -65,7 +65,7 @@ include_graphics(path = "figure/DiRECT/DiRECT_INTERVAL_comparison_groups.png", d
 ```
 \elandscape
 
-Across both INTERVAL and DiRECT, 170 unique platelet proteins were detected. The estimates for these proteins are shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet). Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), however there were divergences in estimates for some proteins. Despite this, there were consistencies for some proteins. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis (Figure \@ref(DiRECT-INTERVAL-platelet)). The direction of the effect indicated that higher BMI is associated with reduction in circulating PAFAH. In agreement with this, a reduction in BMI lead to levels of PAFAH increasing. The estimates for PAFAH were similar and can be seen in Figure \@ref(fig:DiRECT-INTERVAL). Consistencies in the estimates across the two study designs for other proteins, such as for complement factor B, suggest other effects that may be mediated by BMI that could affect platelet function.
+Across both INTERVAL and DiRECT, 170 unique platelet proteins were detected. The estimates for these proteins are shown in Figure \@ref(fig:DiRECT-INTERVAL-platelet). Overall, the estimates were associated with each other (R^2^=0.19, p=1.1x10^-9^), however there were divergences in estimates for some proteins. Despite this, there were consistencies for some proteins. PAFAH was associated with BMI in the observational analysis in INTERVAL. However, PAFAH did not pass multiple testing in the MR analysis. Despite this, the estimate was similar in magnitude to the observational estimate. PAFAH was also associated with BMI change in DiRECT in the instrumental variable analysis (Figure \@ref(DiRECT-INTERVAL-platelet)). The direction of the effect indicated that higher BMI is associated with reduction in circulating PAFAH. In agreement with this, a reduction in BMI lead to levels of PAFAH increasing. The estimates for PAFAH were similar and can be seen in Figure \@ref(fig:DiRECT-INTERVAL-platelet). Consistencies in the estimates across the two study designs for other proteins, such as for complement factor B, suggest other effects that may be mediated by BMI that could affect platelet function.
 
 (ref:scaption-DiRECT-INTERVAL-platelet) Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet pathways
 (ref:caption-DiRECT-INTERVAL-platelet) **Scatter plot of the two stage least squares estimate in DiRECT and the Mendelian Randomisation estimates in INTERVAL and the for the effect of BMI on proteins involved in platelet pathways**. .
@@ -74,14 +74,14 @@ include_graphics(path = "figure/DiRECT/Comparison_scatter_platelet_proteins.pdf"
 ```
 
 ## Discussion
-This chapter brought together results from two different analyses to determine effects of adiposity on the plasma proteome (INTERVAL in Chapter \@ref(BMI-protein-MR) and DiRECT in Chapter \@(BMI-protein-RCT)). Comparisons of protein effects across the different study designs points towards proteins of interest which may be involved in the development or progression of obesity-associated cardiometabolic disease. This chapter also collated the results for the proteins which have been implicated in pathways relevant to platelets. 
+This chapter brought together results from two different analyses to determine effects of adiposity on the plasma proteome (INTERVAL in Chapter \@ref(BMI-protein-MR) and DiRECT in Chapter \@ref(BMI-protein-RCT)). Comparisons of protein effects across the different study designs points towards proteins of interest which may be involved in the development or progression of obesity-associated cardiometabolic disease. This chapter also collated the results for the proteins which have been implicated in pathways relevant to platelets. 
 
-The comparison of results from Chapter \@ref(BMI-protein-MR), which used MR and observational associations to assess the effect of average higher BMI across a population on average protein levels, with results from an RCT in Chapter \@(BMI-protein-RCT) provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The analysis in INTERVAL suggested that proteins most altered by BMI were enriched for diseases such as cardiovascular disease and metabolic disease. As the estimates for the effect of BMI on proteins were consistent across both DiRECT and INTERVAL, this suggests that weight loss is able to reverse the protein changes observed with higher BMI, thereby potentially reducing disease risk. Although previous studies have identified BMI effects on some of these proteins, this direct comparison of effect estimates across an MR study design and weight loss intervention for the general proteome has not yet been done in this manner. This is a key strength of the study. The RCT had fewer participants than INTERVAL (265 vs 2737), but had enough power to detect an effect of BMI change on over 100 proteins. Proteins identified which would benefit following up, based on consistencies across study designs, include SHBG, IGFBP1/2, and GHR. The comparison has also highlighted some more novel proteins such as FAAA and PAFAH, which require further study.
+The comparison of results from Chapter \@ref(BMI-protein-MR), which used MR and observational associations to assess the effect of average higher BMI across a population on average protein levels, with results from an RCT in Chapter \@ref(BMI-protein-RCT) provides two separate lines of evidence to suggest a causal role of BMI in levels of various proteins. The analysis in INTERVAL suggested that proteins most altered by BMI were enriched for diseases such as cardiovascular disease and metabolic disease. As the estimates for the effect of BMI on proteins were consistent across both DiRECT and INTERVAL, this suggests that weight loss is able to reverse the protein changes observed with higher BMI, thereby potentially reducing disease risk. Although previous studies have identified BMI effects on some of these proteins, this direct comparison of effect estimates across an MR study design and weight loss intervention for the general proteome has not yet been done in this manner. This is a key strength of the study. The RCT had fewer participants than INTERVAL (265 vs 2737), but had enough power to detect an effect of BMI change on over 100 proteins. Proteins identified which would benefit following up, based on consistencies across study designs, include SHBG, IGFBP1/2, and GHR. The comparison has also highlighted some more novel proteins such as FAAA and PAFAH, which require further study.
 
-There was not much concordance in BMI effects across study designs for platelet proteins. The agreement in effect estimates across study designs for the platelet protein PAFAH suggests that higher BMI does affect levels of this protein and that it is likely the power issue which means it cannot be detected in the MR. The power analysis in the discussion of Chapter \@(BMI-protein-MR) supports this as it was calculated that an effect size of ±0.33 SDs would be required to have a power of 80%. This protein has been suggested to be antiatherogenic, therefore lower levels would be proatherogenic[@Noto2003]. Validating this protein in an independent cohort and investigating this protein further in the lab could help reveal the functional implications of changes in PAFAH. This protein provides a good example of how triangulating can help tease apart the protein effects which are more likely to be driven by BMI.
+Overall, estimates for the effect of BMI on platelet proteins in DiRECT and INTERVAL displayed a positive association. The agreement in effect estimates across study designs for the platelet protein PAFAH suggests that higher BMI does affect levels of this protein and that it is likely the power issue which means it cannot be detected in the MR. The power analysis in the discussion of Chapter \@ref(BMI-protein-MR) supports this as it was calculated that an effect size of ±0.33 SDs would be required to have a power of 80%. This protein has been suggested to be antiatherogenic, therefore lower levels would be proatherogenic[@Noto2003]. Validating this protein in an independent cohort and investigating this protein further in the lab could help reveal the functional implications of changes in PAFAH. This protein provides a good example of how triangulating can help tease apart the protein effects which are more likely to be driven by BMI.
 
 Divergence in estimates across study designs may also suggest that there are spurious relationships occurring. However, this divergence may also provide some insight into the biology due to the nature of each study design. In general, the MR study design provides insight into the effect on the proteome that a sustained high BMI has over the life course and is therefore indicative of chronic effects. In contrast, the estimates in DiRECT are the effect that acute weight loss (1 year) has on the proteome. Complement factors may be altered in the MR study, but not after a weight loss intervention because weight loss may not have been sustained long enough to induce changes at the proteome level. There was no evidence for a causal relationship between BMI and both SCAR5 and CHAD in the MR, but these proteins displayed strong associations with weight loss in DiRECT. This could be because these protein changes are signals of starvation or due to other changes that happen with caloric restriction, such as a change of medication or loss of muscle mass. This requires further exploration, and requires more formal analysis to disentangle effects.
 
-One of the limitations of the analyses performed in Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT) is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both.
+One of the limitations of the analyses performed in Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT) is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both. This means that there would be other proteins which would likely have reproducible effects across study (such as leptin). Therefore, this is limiting which proteins are discussed in the current chapter.
 
 Overall, this chapter brought together two different study designs which aimed to determine the effect of adiposity on the plasma proteome. Through directly comparing the magnitude of estimates, this chapter identifies proteins which have the strongest evidence for a BMI effect (SHBG, IGFBP1/2, GHR, FAAA), as well as identifying a role of BMI in levels of circulating PAFAH, which may have implications for atherosclerosis. Divergence in estimates indicates effects which may be specific to one study design such as a causal effect of BMI on complement factors in the MR, but the inability to reverse these effects with weight loss. Replicating in other cohorts is now required to further understand these relationships.
