--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -36,15 +36,15 @@ The work presented in this thesis brought together an interdisciplinary approach
 
 (ref:caption-Thesis-schematic-chaps) **Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored.** Figure made using BioRender.com.
 (ref:scaption-Thesis-schematic-chaps) Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored
-```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="(ref:caption-Thesis-schematic-chaps)", fig.scap="(ref:scaption-Thesis-schematic-chaps)"}
+```{r Thesis-schematic-chaps, echo = FALSE, out.width = "80%", fig.cap="(ref:caption-Thesis-schematic-chaps)", fig.scap="(ref:scaption-Thesis-schematic-chaps)"}
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
 (ref:caption-main-thesis-findings) Summary of main findings from the thesis
 ```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
-Chapter = c('Chapter 4', 'Chapter 5', 'Chapter 6', 'Chapter 7', 'Chapter 8')
-findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, there was no evidence for an effect of high BMI on platelet function, but there was evidence for a difference in levels of platelet proteins across groups. This study needs to be replicated with a larger N, controlling for confounders.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be G~q~ coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome and protein levels altered as a result of higher BMI (Chapter 7) can be reversed with weight loss.")
+Chapter = c('Chapter 3', 'Chapter 4', 'Chapter 5', 'Chapter 6', 'Chapter 7', 'Chapter 8')
+findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, the effect of high BMI on platelet function was inconclusive, but there was evidence for a difference in levels of platelet proteins across BMI groups.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be G~q~ coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome, with changes enriched for metabolic disease and renal disease.", "Proteins altered by higher BMI in Chapter 6 can be reversed with weight loss in Chapter 7.")
 mytable = cbind(Chapter, findings)
 colnames(mytable) <- c("Chapter", "Main findings")
 mytable %>% kable(caption = "(ref:caption-main-thesis-findings)", booktabs = TRUE, format="latex") %>% 
@@ -78,30 +78,16 @@ Based on the findings of the research, there have been more questions which have
 
 The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided causal evidence for higher BMI raising IPC. There was also a positive association between BMI and IPC within the cardiac surgery cohort and although the magnitude of estimate was the same, this effect was weak, potentially attributable to the modest sample size. It would be beneficial to validate this association within an independent cohort, such as UK Biobank. It would be useful to link IPC to medical records to be able to look at whether IPC is a predictor of cardiovascular events such as myocardial infarction or stroke. Mendelian randomization could also be implemented to look at the causal effect of IPC on cardiovascular outcomes. Once summary statistics become available for a GWAS of platelet function, with more participants, it would also be beneficial to do an MR analysis to explore the causal role of IPC in platelet function.
 
-Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as the Stratification of Obese PHenotypes to optimize future obesity therapy (SOPHIA) study which would likely have the relevant variables to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be both labour intensive to perform proteomics on thousands of people's platelets computationally intensive to perform GWAS for thousands of proteins.
+Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as the Stratification of Obese PHenotypes to optimize future obesity therapy (SOPHIA) study which would likely have the relevant full blood count data to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be labour intensive.
 
-Analyses explored both the platelet proteome and the plasma proteome in relation to body mass index. The effect of obesity on microparticles released from platelets activated by thrombin has also been explored[@Grande2019]. A systematic comparison across these three proteomes could reveal how these proteomes relate to each other. For example, it could be possible to see whether specific proteins are affected in the same way in both platelets and plasma, or if there is a reciprocal relationship.  
+Analyses explored both the platelet proteome and the plasma proteome in relation to body mass index. The effect of obesity on microparticles released from platelets activated by thrombin has also been explored[@Grande2019]. A systematic comparison across these three proteomes could reveal how these proteomes relate to each other. For example, it could be possible to see whether specific proteins are affected in the same way in both platelets and plasma, or if there is a reciprocal relationship. Initial analyses on platelet proteomic data from patients with COVID-19 have identified that many plasma COVID-19 biomarkers are also altered in platelets (unpublished data from the Hers group). This may also be the case for other diseases such as MI/DVT and therefore requires further exploration. 
 
-Comparison of platelet proteome, releasate proteome and plasma proteome.
+The MR analysis in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. There was also MR evidence that higher BMI raises IPC. Exploring the possibility of a bidirectional effect for both of these analysis would be important as it cannot be ruled out that certain proteins could be involved in processes involved in weight regulation. It is unlikely that IPC would have a causal effect on BMI, however this would also need to be confirmed by use of a two sample MR. The possible effect of plasma proteins on IPC could also be explored using a two sample MR, using summary statistics for their respective GWAS. Another way to address the effects of proteins on IPC and platelet function could be to apply proteins such as fumarylacetoacetase, SHBG and leptin to megakaryocytes and to see whether there are changes in production of platelets compared to control. Proteins could also be applied in platelet aggregation experiments or _in vitro_ thrombosis to see whether these cause platelet hyperactivity.
 
-The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter xx, with
-Chapter 6
-- Further signaling and functional work required.
-- These chemokines were measured within Chapter 7 - there was evidence for an association between BMI and MDC, and weak evidence for a causal effect (p=0.07). This did not pass multiple testing correction. It would be beneficial to look at these chemokines in other cohorts. In the DiRECT analysis, there was weak evidence that a reduction in weight reduces levels of MDC (p=0.06). Again, this did not pass multiple testing. The agreement in direction across the two studies (raised with higher BMI and reduced with weight loss), suggests that this effect could be real, however it may be a relatively small effect which may require more targeted proteomics. The effects were smaller for TARC, suggesting that if these effects are real, body mass index has a larger effect on MDC levels.
+Exploring individual proteins is useful in understanding disease risk, however further work on protein profiles is required as it is more likely a change in various proteins mediates the risk. Techniques to explore profiles are not well developed, however there are a few approaches which could be implemented. One such technique would be network MR, to be able to identify the relationship between proteins altered by BMI. This could help reveal whether there are any cascade effects, where an alteration in one protein may lead to downstream changes in other proteins and as such be at the top of the cascade. Another technique to begin unpicking profile effects could be exploring the effect of BMI on ratios between proteins. This technique has been used for metabolites, for example a single measure of the ratio between monounsaturated fats to polyunsaturated fats circulating in the blood is used[@Carayol2017c]. It is unclear whether this technique would be suitable for proteomics data, and if it is, which protein ratios would be biologically meaningful to express as a ratio. 
 
-Chapter 7
-Exploring individual proteins is useful in understanding disease risk, however further work on protein profiles is required as it is more likely a change in various proteins mediates the risk. Techniques to explore profiles are not well developed, however there are a few approaches which could be implemented. One such technique would be network MR, to be able to identify the relationship between proteins altered by BMI. This could help reveal whether there are any cascade effects, where an alteration in one protein may lead to downstream changes in other proteins. Another technique could be exploring the effect of BMI on ratios between proteins. This technique has been used for metabolites, for example the ratio between monounsaturated fats to polyunsaturated fats[@Carayol2017c]. 
+Methods to assess the effect of BMI on proteins have used linear methods. Linear MR is commonly used, however this may not always be the most appropriate method as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship[@Sun2019]. Nonlinearity has been observed for other associations, for example with vitamin D deficiency and CVD risk[@Zhou2021]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the "nlmr" R package stratify estimates based on quantiles. As a result of this, the user cannot define their bounds of their strata and therefore makes it difficult to interpret results. The "glsmr" package was therefore developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail and implementation of these packages is provided in Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. A limitation of this approach is that stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders[@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power. Other studies such as the Qatar Biobank have higher rates of obesity than other cohorts, where 39% have obesity and the mean BMI is 29 kg/m^2^[@AlKuwari2015]. Studies such as this would be more suitable for nonlinear analyses.
 
-The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship[@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the "nlmr" R package stratify estimates based on quantiles. As a result of this, the user cannot define their bounds of their strata and therefore makes it difficult to interpret results. The "glsmr" package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail has been provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders[@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power.
-
-Chapter 8
-The analyses in Chapter \@ref(BMI-protein-RCT) utilise an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI (from >40 gk/m^2^) to ..
-
-- Utilise bariatric surgery data as a third line of evidence to explore effect of BMI/weight loss on the plasma proteome. Bring in that this will be performed as part of the transition fellowship.
-- Work on proteomic networks to really determine key proteins in disease - this leads onto the transition fellowship.
-- Instrument groups of proteins
-- Two sample MR of proteins of interest to immature platelet count - .
-
-Apply proteins from studies to platelets in experiments e.g. in vitro thrombosis. 
+The analyses in Chapter \@ref(BMI-protein-RCT) utilise an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. It is also likely that this weight loss would not be sustainable long term. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI. A previous study in adolescents indicated that a gastric bypass and sleeve gastrectomy resulted in a 3-year BMI reduction of 15 kg/m^2^, around 30% reduction of baseline BMI[@Inge2016]. This drastic change in BMI would likely have a substantial effect on the plasma proteome. Previous studies have explored this and I plan to utilise some pilot data from the bariatric surgery trial, where serum samples have been analysed by the new Olink Explore 1536 panel. This will provide estimates for the effect of bariatric surgery-induced weight loss on the serum proteome. These estimate can be compared alongside the estimates presented in Chapter \@ref(Comparison-proteome).
 
 ## Overall conclusion
